<project name="Java14NewFeatures" default="compile" basedir=".">

	<property name="appname" value="Java14NewFeatures" />

	<property file="build.properties" />
	
	<echo>Building ${ant.project.name} on OS: ${os.name}-${os.arch}</echo>


    <target name="clean">
        <delete dir="build"/>
    </target>

    <target name="compile">
        <mkdir dir="build/classes"/>
        <javac debug="true" srcdir="src" executable="${java14.path}" destdir="build/classes" fork="true">
        	<compilerarg line="--release 14"/>
        	<compilerarg line="--enable-preview"/>
        </javac>
    </target>

    <target name="jar">
        <mkdir dir="build/jar"/>
        <jar destfile="build/jar/Java14Features.jar" basedir="build/classes">
            <manifest>
                <attribute name="Main-Class" value="com.likya.preview.FeaturesJEP305"/>
            </manifest>
        </jar>
    </target>

    <target name="runjar">
        <java jvm="${java}" jar="build/jar/Java14Features.jar" fork="true">
        	 <jvmarg value="--enable-preview"/>
    	</java>
    </target>
	
    <target name="runclass">
        <java classname="com.likya.preview.FeaturesJEP305" classpath="build/classes/." jvm="${java}" fork="true">
        	 <jvmarg value="--enable-preview"/>
    	</java>
    </target>

    <target name="runjpe305" depends="clean,compile">
        <java classname="com.likya.java14.FeaturesJEP305" classpath="build/classes/." jvm="${java}" fork="true">
        	 <jvmarg value="--enable-preview"/>
    	</java>
    </target>

    <target name="runjpe358" depends="clean,compile">
        <java classname="com.likya.java14.FeaturesJEP358" classpath="build/classes/." jvm="${java}" fork="true">
        	<jvmarg value="--enable-preview"/>
        	<jvmarg value="-XX:+ShowCodeDetailsInExceptionMessages"/>
    	</java>
    </target>

</project>